tests/baselines/reference/parserFunctionDeclaration1.errors.txt
==== tests/cases/compiler/parserFunctionDeclaration1.ts (1 errors) ====
    declare module M {
      declare function F();
      ~~~~~~~
!!! parserFunctionDeclaration1.ts(2,3): error TS1038: A 'declare' modifier cannot be used in an already ambient context.
    }